--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -257,21 +257,6 @@
   [data-product-gallery-fullscreen] & {
     min-height: 80px;
   }
-
-  // .swiper-slide:hover {
-  //   img {
-  //     opacity: 1;
-  //   }
-  // }
-
-  // .swiper-slide-thumb-active {
-  //   border-color: #0599bb;
-  //   box-shadow: inset 0 0 0 1px #0599bb;
-
-  //   img {
-  //     opacity: 1;
-  //   }
-  // }
 }
 
 .product-gallery-thumbs__viewport {
@@ -296,6 +281,21 @@
 
   [data-product-gallery-fullscreen] & {
     width: 80px;
+  }
+
+  &:hover {
+    img {
+      opacity: 1;
+    }
+  }
+
+  &.embla-thumbs__slide--selected {
+    border-color: #0599bb;
+    box-shadow: inset 0 0 0 1px #0599bb;
+
+    img {
+      opacity: 1;
+    }
   }
 
   img {
