--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1249,7 +1249,7 @@
 
 .product-slider {
   --carousel-gap: 12px;
-  --carousel-rows: 4;
+  --carousel-columns: 5;
 
   overflow: hidden;
   padding: 48px 0;
@@ -1258,8 +1258,15 @@
     background-color: rgb(232, 232, 232);
   }
 
+  @include --max-3xl {
+    --carousel-columns: 4;
+  }
+  @include --max-lg {
+    --carousel-columns: 3;
+  }
   @include --max-md {
     padding: 24px 0 32px;
+    --carousel-columns: 2;
   }
 }
 
