--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -304,12 +304,31 @@
 }
 
 .profile-form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 24px;
+  grid-template-columns: repeat(12, 1fr);
 }
 
 .profile-form__row {
+  grid-column: span 12 / span 12;
+}
+
+.profile-form__row_3 {
+  grid-column: span 3 / span 3;
+}
+
+.profile-form__row_6 {
+  grid-column: span 6 / span 6;
+}
+
+.profile-form__subtitle {
+  grid-column: span 12 / span 12;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  padding: 12px 0;
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .profile-form__label {
@@ -366,8 +385,9 @@
 
 .profile-form-avatar__image {
   display: flex;
-  height: 84px;
-  width: 84px;
+  height: 64px;
+  width: 64px;
+  flex-shrink: 0;
   img {
     border-radius: 8px;
     width: 100%;
@@ -382,12 +402,16 @@
 }
 
 .profile-form__warning {
+  grid-column: span 12 / span 12;
+
   font-size: 16px;
   line-height: 1.25;
   color: darkred;
 }
 
 .profile-form__actions {
+  grid-column: span 12 / span 12;
+
   display: flex;
   align-items: center;
   gap: 12px;
