--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -313,8 +313,24 @@
   grid-column: span 12 / span 12;
 }
 
+.profile-form__row_1 {
+  grid-column: span 1 / span 1;
+}
+
+.profile-form__row_2 {
+  grid-column: span 2 / span 2;
+}
+
 .profile-form__row_3 {
   grid-column: span 3 / span 3;
+}
+
+.profile-form__row_4 {
+  grid-column: span 4 / span 4;
+}
+
+.profile-form__row_5 {
+  grid-column: span 5 / span 5;
 }
 
 .profile-form__row_6 {
