--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -338,6 +338,26 @@
   grid-column: span 6 / span 6;
 }
 
+.profile-form__row_7 {
+  grid-column: span 7 / span 7;
+}
+
+.profile-form__row_8 {
+  grid-column: span 8 / span 8;
+}
+
+.profile-form__row_9 {
+  grid-column: span 9 / span 9;
+}
+
+.profile-form__row_10 {
+  grid-column: span 10 / span 10;
+}
+
+.profile-form__row_11 {
+  grid-column: span 11 / span 11;
+}
+
 .profile-form__subtitle {
   grid-column: span 12 / span 12;
 
