--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -37,7 +37,7 @@
   color: #0699bc;
   cursor: pointer;
   border-bottom: 1px dashed currentColor;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
 }
 
@@ -45,6 +45,10 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  
+  &[hidden] {
+    display: none;
+  }
 }
 
 .office-auth__label {
