--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -39,13 +39,16 @@
   border-bottom: 1px dashed currentColor;
   font-size: 14px;
   line-height: 1;
+  &:hover {
+    color: #f18a16;
+  }
 }
 
 .office-auth__row {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  
+
   &[hidden] {
     display: none;
   }
