--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -658,6 +658,7 @@
   top: auto;
   border-radius: 50%;
   bottom: 12px;
+  padding: 0;
   background-color: #ffffff80;
   box-shadow: 0 0 9px #00192914;
   color: #616161;
