--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -633,11 +633,14 @@ textarea.order-textfield__control {
   height: 36px;
   position: relative;
   cursor: pointer;
+  color: #333;
+  border-radius: 4px;
+  border: 2px solid #e3e3e3;
 }
 
 .order-invoice__row-remove::before {
   content: '';
-  width: 16px;
+  width: 14px;
   height: 2px;
   position: absolute;
   left: 50%;
@@ -648,7 +651,7 @@ textarea.order-textfield__control {
 
 .order-invoice__row-remove::after {
   content: '';
-  width: 16px;
+  width: 14px;
   height: 2px;
   position: absolute;
   left: 50%;
@@ -658,9 +661,21 @@ textarea.order-textfield__control {
 }
 
 .order-invoice__row-title {
+  flex-grow: 1;
+  position: relative;
+}
+
+.order-invoice__row-title-inner {
   text-overflow: ellipsis;
   overflow: hidden;
-  width: calc(100% - 40px);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  white-space: nowrap;
+  line-height: 1;
+  font-size: 14px;
 }
 
 .order-invoice__list {
