--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -249,6 +249,10 @@
   text-align: center;
   box-sizing: border-box;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  justify-content: center;
 
   &:hover {
     color: #fff;
