--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -262,11 +262,7 @@
   position: relative;
   overflow: hidden;
   margin-top: 12px;
-
-  // [data-product-gallery-fullscreen] & {
-  //   min-height: 80px;
-  //   max-height: 80px;
-  // }
+  flex-shrink: 0;
 }
 
 .product-gallery-thumbs__viewport {
