--- a/src/scss/favorites.scss
+++ b/src/scss/favorites.scss
@@ -139,29 +139,29 @@
 }
 
 .favorites-page__remove::before {
-  content: '';
+  content: "";
   display: block;
-  width: 10px;
-  height: 3px;
+  width: 12px;
+  height: 2px;
   background: #c01116;
-  border-radius: 2px;
+  border-radius: 3px;
   position: absolute;
   right: 0;
-  top: 50%;
-  transform: rotate(-45deg) translateY(-50%);
+  top: 16px;
+  transform: rotate(-45deg);
 }
 
 .favorites-page__remove::after {
-  content: '';
+  content: "";
   display: block;
-  width: 10px;
-  height: 3px;
+  width: 12px;
+  height: 2px;
   background: #c01116;
-  border-radius: 2px;
+  border-radius: 3px;
   position: absolute;
   right: 0;
-  top: 50%;
-  transform: rotate(45deg) translateY(-50%);
+  top: 16px;
+  transform: rotate(45deg);
 }
 
 .favorites-page__remove span {
