--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -126,6 +126,9 @@
 }
 
 .product-card__availability {
+  position: absolute;
+  left: 12px;
+  top: 12px;
   font-size: 10px;
   text-transform: uppercase;
   font-weight: bold;
@@ -144,6 +147,11 @@
   color: #fff;
   background-color: #a5a5a5;
   border-color: #858585;
+
+  @include --max-xl {
+    left: 6px;
+    top: 6px;
+  }
 }
 
 .product-card__actions {
