--- a/src/scss/buy-in-click.scss
+++ b/src/scss/buy-in-click.scss
@@ -275,7 +275,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  border: 34px solid rgba(73, 88, 253, 0.12);
+  border: 34px solid #e3e3e3;
   border-radius: 50%;
   z-index: -1;
 }
@@ -286,8 +286,7 @@
   z-index: -1;
   width: 141px;
   height: 108px;
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='141px' height='108px'%3E%3Cpath fill-rule='evenodd' fill='rgb(73, 87, 254)' d='M137.142,18.499 L55.405,102.561 C54.918,103.407 54.312,104.203 53.573,104.913 C49.389,108.934 42.750,108.786 38.746,104.584 L3.514,68.515 C-0.491,64.313 -0.344,57.647 3.840,53.628 C8.025,49.607 14.664,49.754 18.668,53.956 L46.074,82.013 L121.988,3.938 C125.992,-0.263 132.630,-0.410 136.815,3.610 C141.000,7.631 141.146,14.297 137.142,18.499 Z' /%3E%3C/svg%3E")
-    no-repeat 50% 50%;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='141px' height='108px'%3E%3Cpath fill-rule='evenodd' fill='rgb(255, 237, 0)' d='M137.142,18.499 L55.405,102.561 C54.918,103.407 54.312,104.203 53.573,104.913 C49.389,108.934 42.750,108.786 38.746,104.584 L3.514,68.515 C-0.491,64.313 -0.344,57.647 3.840,53.628 C8.025,49.607 14.664,49.754 18.668,53.956 L46.074,82.013 L121.988,3.938 C125.992,-0.263 132.630,-0.410 136.815,3.610 C141.000,7.631 141.146,14.297 137.142,18.499 Z' /%3E%3C/svg%3E") no-repeat 50% 50%;
   background-size: 100% 100%;
   top: -20px;
   left: 50%;
