--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,10 +1,12 @@
 .footer-primary__grid {
   display: grid;
   grid-template-columns: 474px 2fr 420px 1fr 520px;
-  grid-template-rows: auto 70px 1fr;
+  grid-template-rows: auto 70px auto 70px auto;
   gap: 0px 0px;
   grid-template-areas:
     'logo . payment . feedback'
+    '. . payment . feedback'
+    'phone . payment . feedback'
     '. . payment . feedback'
     'social . payment . feedback';
   @include --max-3xl {
@@ -120,15 +122,15 @@
   }
 }
 
-.footer-logo__phone {
-  text-align: right;
+.footer-phone {
+  // text-align: right;
   // padding-top: 20px;
   // @include --max-md {
   //   padding-top: 0;
   // }
 }
 
-.footer-logo__phone-number {
+.footer-phone__number {
   font-size: 22px;
   line-height: 1;
   text-transform: uppercase;
@@ -141,7 +143,7 @@
   }
 }
 
-.footer-logo__phone-time {
+.footer-phone__time {
   opacity: 0.702;
   font-size: 14px;
   letter-spacing: 0px;
@@ -604,7 +606,7 @@
 
 .footer-secondary__jur {
   font-size: 16px;
-  line-height: 30px;
+  line-height: 24px;
   color: #909090;
   a {
     color: inherit;
@@ -622,11 +624,11 @@
 
 .footer-secondary__address {
   font-size: 16px;
-  line-height: 30px;
+  line-height: 24px;
   color: #909090;
   @include --max-3xl {
     font-size: 14px;
-    line-height: 24px;
+    line-height: 20px;
   }
   @include --max-md {
     font-size: 12px;
@@ -649,7 +651,7 @@
   margin: 0;
   list-style: none;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 24px;
   a {
     color: #909090;
     text-decoration: underline;
