--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,6 @@
 .footer-primary__grid {
   display: grid;
-  grid-template-columns: 474px 2fr 420px 1fr 520px;
+  grid-template-columns: auto 1fr auto 1fr auto;
   grid-template-rows: auto 40px auto 40px 1fr;
   gap: 0px 0px;
   grid-template-areas:
@@ -9,15 +9,9 @@
     'phone . payment . feedback'
     '. . payment . feedback'
     'social . payment . feedback';
-  @include --max-3xl {
-    grid-template-columns: 474px 2fr 420px 1fr 420px;
-  }
-  @include --max-2xl {
-    grid-template-columns: 460px 2fr 360px 1fr 340px;
-  }
   @include --max-xl {
-    grid-template-columns: 460px 1fr 360px;
-    grid-template-rows: auto 24px auto 24px auto 24px 1fr;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 24px auto 24px auto 24px auto;
     grid-template-areas:
       'logo . feedback'
       '. . feedback'
@@ -28,7 +22,7 @@
       'payment . feedback';
   }
   @include --max-lg {
-    grid-template-columns: 360px 1fr 360px;
+    grid-template-columns: auto 1fr auto;
     grid-template-rows: auto auto auto auto;
     grid-template-areas:
       'payment . feedback'
@@ -88,6 +82,10 @@
   background: #888888;
   padding-top: 40px;
   padding-bottom: 40px;
+  @include --max-xl {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
   @include --max-lg {
     padding-bottom: 0;
   }
