--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -23,7 +23,7 @@
   }
   @include --max-lg {
     grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto auto auto 24px auto;
+    grid-template-rows: auto auto auto 48px auto;
     grid-template-areas:
       'payment . feedback'
       '. . feedback'
@@ -45,14 +45,32 @@
 .footer-primary__grid-phone {
   grid-area: phone;
   @include --max-lg {
-    background: #464646;
+    position: relative;
+    &::before {
+      content: '';
+      background: #464646;
+      position: absolute;
+      left: calc(var(--container-padding) * -1);
+      right: calc(var(--container-padding) * -1);
+      top: -24px;
+      bottom: -24px;
+    }
   }
 }
 
 .footer-primary__grid-logo {
   grid-area: logo;
   @include --max-lg {
-    background: #464646;
+    position: relative;
+    &::before {
+      content: '';
+      background: #464646;
+      position: absolute;
+      left: calc(var(--container-padding) * -1);
+      right: calc(var(--container-padding) * -1);
+      top: -24px;
+      bottom: -24px;
+    }
   }
 }
 
