--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -32,8 +32,8 @@
     //   'logo logo phone';
   }
   @include --max-md {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 24px auto 24px auto 24px auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto 24px auto 24px auto 48px auto;
     grid-template-areas:
       'payment payment payment'
       '. . .'
@@ -47,38 +47,38 @@
 
 .footer-primary__grid-phone {
   grid-area: phone;
-  // @include --max-lg {
-  //   position: relative;
-  //   z-index: 1;
-  //   &::before {
-  //     content: '';
-  //     background: #464646;
-  //     position: absolute;
-  //     left: calc(var(--container-padding) * -1);
-  //     right: calc(var(--container-padding) * -1);
-  //     top: -24px;
-  //     bottom: -24px;
-  //     z-index: -1;
-  //   }
-  // }
+  @include --max-md {
+    position: relative;
+    z-index: 1;
+    &::before {
+      content: '';
+      background: #464646;
+      position: absolute;
+      left: calc(var(--container-padding) * -1);
+      right: calc(var(--container-padding) * -1);
+      top: -24px;
+      bottom: -24px;
+      z-index: -1;
+    }
+  }
 }
 
 .footer-primary__grid-logo {
   grid-area: logo;
-  // @include --max-lg {
-  //   position: relative;
-  //   z-index: 1;
-  //   &::before {
-  //     content: '';
-  //     background: #464646;
-  //     position: absolute;
-  //     left: calc(var(--container-padding) * -1);
-  //     right: calc(var(--container-padding) * -1);
-  //     top: -24px;
-  //     bottom: -24px;
-  //     z-index: -1;
-  //   }
-  // }
+  @include --max-md {
+    position: relative;
+    z-index: 1;
+    &::before {
+      content: '';
+      background: #464646;
+      position: absolute;
+      left: calc(var(--container-padding) * -1);
+      right: calc(var(--container-padding) * -1);
+      top: -24px;
+      bottom: -24px;
+      z-index: -1;
+    }
+  }
 }
 
 .footer-primary__grid-social {
@@ -89,16 +89,16 @@
 
 .footer-primary__grid-payment {
   grid-area: payment;
-  @include --max-md {
-    border-bottom: 1px solid #949494;
-  }
+  // @include --max-md {
+  //   border-bottom: 1px solid #949494;
+  // }
 }
 
 .footer-primary__grid-feedback {
   grid-area: feedback;
-  @include --max-md {
-    border-bottom: 1px solid #949494;
-  }
+  // @include --max-md {
+  //   border-bottom: 1px solid #949494;
+  // }
 }
 
 .footer-primary {
